Fix broken links in solution notebooks

--- a/finite_markov/finite_mc_solutions_jl.ipynb
+++ b/finite_markov/finite_mc_solutions_jl.ipynb
@@ -248,13 +248,22 @@
    "source": [
     "## Exercise 3\n",
     "\n",
-    "A solution from the [quantecon library](https://github.com/QuantEcon/QuantEcon.jl)  can be found [here](https://github.com/QuantEcon/QuantEcon.jl/blob/master/src/markov_approx.jl#L17-L89)\n"
+    "A solution from the [quantecon library](https://github.com/QuantEcon/QuantEcon.jl)  can be found [here](https://github.com/QuantEcon/QuantEcon.jl/blob/master/src/markov/markov_approx.jl)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.1-pre",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -262,7 +271,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.1"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
